Remove notification group padding to stop Raven size shifting
This would happen when all notifications were cleared - Raven would shrink by 16px horizontally due to the padding on the notification groups.

--- a/src/theme/common/_raven.scss
+++ b/src/theme/common/_raven.scss
@@ -33,9 +33,6 @@
         @extend %reset_style;
 
         .raven-notifications-group {
-            padding: 2px 8px;
-            margin-bottom: 4px;
-
             .raven-notifications-group-header {
                 padding: 0 4px;
             }
